# lemonade

./: .gitignore  Cargo.toml  ERRORS.md  LICENSE  README.md  SECURITY.md  TODO.md  build  build.rs  x86_64-lemonade.json
.cargo/: config.toml
.github/workflows/: rust.yml
iso/boot/grub/: grub.cfg
lemonade/: Cargo.toml
lemonade/.cargo/: config.toml
lemonade/src/: fs.rs  lib.rs  main.rs  pci.rs  spinlock.rs
lemonade/src/task/: executor.rs
lemonade/tests/: heap_allocation.rs  should_panic.rs  stack_overflow.rs
src/: acpi.rs  base64.rs  clock.rs  cmos.c  cmos.rs  command.rs  command_line.rs  commandline.rs  fs.rs  gdt.rs  graphics.rs  hashmaps.rs  interrupts.rs  lib.rs  main.rs  memory.rs  pci.rs  randomness.rs  sorting.rs  vga_buffer.rs
src/allocator/: fixed_size_block.rs
src/commands/: helloworld.rs  mod.rs
src/disks/: ahci.rs
src/task/: executor.rs  keyboard.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
